--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 # Sets the minimum version of CMake required to build the native library.
 
-cmake_minimum_required(VERSION 3.22.1)
+cmake_minimum_required(VERSION 3.4.1)
 
 # Declares and names the project.
 
@@ -14,13 +14,17 @@ project("GuidedProject")
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
-add_library( # Sets the name of the library.
-        GuidedProject
-        # Sets the library as a shared library.
+add_library(
+        native-lib
+
+        # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        native-lib.cpp)
+        src/main/cpp/Oscillator.cpp
+        src/main/cpp/AudioEngine.cpp
+        src/main/cpp/jni-bridge.cpp
+        )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -40,8 +44,9 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        GuidedProject
+        native-lib
 
         # Links the target library to the log library
         # included in the NDK.
-        ${log-lib})
+        ${log-lib}
+        aaudio)
